[gd_scene load_steps=34 format=2]

[ext_resource path="res://assets/towers/tower_idling.png" type="Texture" id=1]
[ext_resource path="res://src/LaserTower.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/laser_shoot.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/healthbar_green.png" type="Texture" id=4]
[ext_resource path="res://assets/towers/laser_tower/laser_tower_2.png" type="Texture" id=5]
[ext_resource path="res://assets/towers/laser_tower/laser_tower_0.png" type="Texture" id=6]
[ext_resource path="res://assets/towers/laser_tower/laser_tower_3.png" type="Texture" id=7]
[ext_resource path="res://assets/towers/laser_tower/laser_tower_1.png" type="Texture" id=8]
[ext_resource path="res://assets/towers/laser_tower/laser_tower_5.png" type="Texture" id=9]
[ext_resource path="res://assets/towers/laser_tower/laser_tower_4.png" type="Texture" id=10]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 8 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 8 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 9 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 9 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 10 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 10 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "idling",
"speed": 2.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "battery1",
"speed": 2.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "battery2",
"speed": 2.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "battery0",
"speed": 2.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "battery3",
"speed": 2.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "battery5",
"speed": 2.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "battery4",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 7.95908, 8.01494 )

[node name="LaserTower" type="Area2D" groups=[
"Tower",
]]
scale = Vector2( 3, 3 )
z_as_relative = false
input_pickable = false
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1.59701 )
z_index = 1
frames = SubResource( 4 )
animation = "battery5"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.38419e-07 )
shape = SubResource( 5 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 7.51796, 0 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="LaserShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -40.0

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -4.97276
margin_top = -5.98975
margin_right = 195.027
margin_bottom = 20.0102
rect_scale = Vector2( 0.05, 0.05 )
max_value = 3.0
value = 3.0
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="." to="." method="_on_LaserTower_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
